[project]

name = "object-settings"
version = "3.0.dev"
description = "Simple object-oriented config library, where your settings are objects"
readme = "README.md"

dependencies = [
    "appdirs>=1.3.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

license = {text = "MIT License"}
urls = {"Homepage"="https://github.com/MrHole/object-settings"}



[tool.setuptools]

packages = [
    "settings",
    "settings_gui",
    "settings_gui.tkinter",
    "settings_gui.ttk",
]

include-package-data = true
package-data = {'settings_gui.tkinter'=['icons/*']}
