[project]

name = "object-settings"
version = "3.1.3"
description = "Simple object-oriented config library, where your settings are objects"
readme = "README.md"
keywords = ["settings", "setting", "config", "OOP", "GUI"]
urls = {"Homepage"="https://github.com/MrHole/object-settings"}
license = {text = "MIT License"}

dependencies = [
    "appdirs>=1.3.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces"
]



[tool.setuptools]

packages = [
    "settings",
    "settings_gui",
    "settings_gui.tkinter",
    "settings_gui.ttk",
]

include-package-data = true
package-data = {'settings_gui.tkinter'=['icons/*']}
